--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,16 @@ body{
     padding:50px 0px 0px 0px;
     z-index:0;
 }
+
 .bg-light {
     background-color: #dbb08d !important;
+}
+
+.table .thead-dark th{
+    color:floralwhite;
+    background-color:#6E3F19;
+}
+
+tr:hover {
+    background-color:#dbb08db0!important;
 }
